Run microservice install script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-## Eureka
-spring.application.name=template-microservice
-eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
-
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://template-service_database:5432/template_db
+spring.datasource.url=jdbc:postgresql://message-service_database:5432/messages
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=PdgDNLnlrr3NgshqwKJA
+spring.datasource.password=PFmte}vA*88`&"26
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
