--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
 version: "3.5"
 
 services:
-  template-service_api:
-    container_name: template-service_api
+  message-service:
+    container_name: message-service
     build:
       context: ./
       dockerfile: Dockerfile
-    image: template-service
+    image: message-service
     ports:
-      - "8080:8080"
+      - "8084:8080"
     depends_on:
-      - template-service_database
+      - message-service_database
     networks:
       - noodlee-system-network
 
-  template-service_database:
-    container_name: template-service_database
+  message-service_database:
+    container_name: message-service_database
     image: postgres:9.6
     ports:
-      - "5432:5432"
+      - "5436:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: PdgDNLnlrr3NgshqwKJA
-      POSTGRES_DB: template_db
+      POSTGRES_PASSWORD: PFmte}vA*88`&"26
+      POSTGRES_DB: messages
     volumes:
-      - template-service_database-volume:/var/lib/postgresql/data
+      - message-service_database-volume:/var/lib/postgresql/message
     networks:
       - noodlee-system-network
 
@@ -34,4 +34,4 @@ networks:
     driver: bridge
     
 volumes:
-  template-service_database-volume:
+  message-service_database-volume:
