--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.noodleesystem</groupId>
-	<artifactId>template</artifactId>
+	<artifactId>message</artifactId>
 	<version>1.0</version>
-	<name>Template Microservice</name>
-	<description>Noodlee System Template Microservice</description>
+	<name>Message Microservice</name>
+	<description>Noodlee System Message Microservice</description>
 	<properties>
 		<java.version>8</java.version>
 		<spring-cloud.version>Finchley.SR2</spring-cloud.version>
@@ -58,28 +58,12 @@
 			<artifactId>boon-reflekt</artifactId>
 			<version>0.6.6</version>
 		</dependency>
-		<!-- Eureka Client -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
